# I-Forgot-My-Deck

./: .gitignore  README.md
ifmd-back/: .gitignore  Cargo.toml  build.rs  database.sqlite  deck.txt
ifmd-back/migrations/: 0001_database_init.sql  0002_add_set.sql  0003_add_card_display_name.sql  0004_add_users.sql  0005_add_email.sql  0006_add_verification.sql  0007_add_data_code.sql  0008_add_tokens.sql  0009_add_timestamps.sql
ifmd-back/src/: cache.rs  card.rs  constants.rs  database.rs  db_cleaner.rs  email.rs  json_handler.rs  lib.rs  main.rs  parse_deck.rs  queue.rs  state.rs
ifmd-back/src/account/: account.rs  code.rs  email.rs  token.rs
ifmd-back/src/deck/: cache.rs  card.rs  parse_deck.rs
ifmd-back/src/routes/: accounts.rs  cards.rs  ws.rs
ifmd-frontend/: index.html  package.json
ifmd-frontend/src/: App.css  App.tsx  AuthAccount.tsx  CreateAccount.tsx  DisplayDeck.tsx  buildDeck.ts  main.tsx  types.ts
ifmd-frontend/src/account/: Account.css  AuthAccount.tsx  CreateAccount.tsx  VerifyAccount.tsx
ifmd-frontend/src/home/: Home.tsx  home.css
