[package]
name = "ifmd-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum-server = "0.7"
tower-http = { version="0.6.6", features=["cors"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
directories = "6.0.0"
once_cell = "1.21.3"
oneshot = {version = "0.1.11", features = ["async"] }
tsync = "3.0.0"
lettre = "0.11.19"
email-address-parser = "2.0.0"
rand = "0.9.2"
sha256 = "1.6.0"
chrono = "0.4.42"
